--- a/practicas_uf1/.vscode/launch.json
+++ b/practicas_uf1/.vscode/launch.json
@@ -6,6 +6,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - practica_1_ex_1",
+            "request": "launch",
+            "mainClass": "practica_1_ex_1"
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "${file}"
